dex/patches/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dex
  namespace: auth
spec:
  gateways:
    - istio-system/istio-ingressgateway
    - knative-serving/knative-ingress-gateway
    - kubeflow/kubeflow-gateway
  hosts:
    - kubeflow.agi.zjuici.com
    - py-slim.tablegpt.zjuici.com
    - icbc.tablegpt.zjuici.com
    - icbc-ss.tablegpt.zjuici.com
    - pubtrans.tablegpt.zjuici.com
    - chatbot.agi.zjuici.com
    - pybot.agi.zjuici.com
